monitoring/prometheus/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
  - name: web
    port: 9090
  selector:
    name: prometheus
