monitoring/prometheus/prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  rules:
  - host: prometheus.${HOSTNAME}.k8s.o12stack.org
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: web
